@@ -874,22 +874,6 @@ name|yarn
 operator|.
 name|api
 operator|.
-name|ContainerExitStatus
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|api
-operator|.
 name|records
 operator|.
 name|ApplicationAttemptId
@@ -911,6 +895,24 @@ operator|.
 name|records
 operator|.
 name|ApplicationId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerExitStatus
 import|;
 end_import
 
