@@ -400,22 +400,6 @@ name|yarn
 operator|.
 name|api
 operator|.
-name|ContainerExitStatus
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|api
-operator|.
 name|ContainerManager
 import|;
 end_import
@@ -543,6 +527,24 @@ operator|.
 name|records
 operator|.
 name|Container
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerExitStatus
 import|;
 end_import
 
