@@ -394,6 +394,8 @@ name|yarn
 operator|.
 name|api
 operator|.
+name|records
+operator|.
 name|ContainerExitStatus
 import|;
 end_import
