@@ -143,6 +143,9 @@ Release 2.1.0-beta - UNRELEASED
     YARN-792. Moved NodeHealthStatus from yarn.api.record to
     yarn.server.api.record. (Jian He via vinodkv)
 
+    YARN-806. Moved ContainerExitStatus from yarn.api to yarn.api.records. (Jian
+    He via vinodkv)
+
   NEW FEATURES
 
     YARN-482. FS: Extend SchedulingMode to intermediate queues. 
